# Naive_Bayes_Classifier

./: .gitignore  CMakeLists.txt
src/: digit.cpp  digit.h  image.cpp  image.h  main.cpp  model.cpp  model.h
test/: naivebayes-tests.cpp
